tools/syn/tests/quote/ui/not-quotable.stderr
error[E0277]: the trait bound `Ipv4Addr: ToStream` is not satisfied
 --> tests/ui/not-quotable.rs:6:13
  |
6 |     let _ = quote! { #ip };
  |             ^^^^^^^^^^^^^^
  |             |
  |             the trait `ToStream` is not implemented for `Ipv4Addr`
  |             required by a bound introduced by this call
  |
  = help: the following other types implement trait `ToStream`:
            bool
            char
            isize
            i8
            i16
            i32
            i64
            i128
          and $N others
  = note: this error originates in the macro `quote` (in Nightly builds, run with -Z macro-backtrace for more info)
